// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`search Basic search renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="mr6"
        >
          <svg
            className="icon w18 h18"
          >
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`search Basic search with \`site\` set to show filter toggle renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="mr6"
        >
          <svg
            className="icon w18 h18"
          >
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`search Search with \`disableModal\` option set renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div
      className="w-full"
    >
      <div
        aria-expanded={false}
        aria-haspopup="listbox"
        aria-labelledby="docs-search-label"
        aria-owns={null}
        role="combobox"
      >
        <label
          className="cursor-pointer"
          htmlFor="docs-search-input"
          id="docs-search-label"
        >
          <div
            className="absolute flex-parent flex-parent--center-cross flex-parent--center-main w36 h36"
          >
            <svg
              className="icon color-gray "
            >
              <title>
                Search
              </title>
              <use
                xlinkHref="#icon-search"
              />
            </svg>
          </div>
        </label>
        <input
          aria-activedescendant={null}
          aria-autocomplete="list"
          aria-controls={null}
          aria-labelledby="docs-search-label"
          autoComplete="off"
          className="input bg-white px36 h36"
          id="docs-search-input"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          placeholder="Search docs.mapbox.com"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`search Search with \`narrow\` option set renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={
          Object {
            "paddingLeft": "12px",
            "paddingRight": "12px",
          }
        }
      >
        <span
          className=""
        >
          <svg
            className="icon w18 h18"
          >
            <title>
              Search
            </title>
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
      </button>
    </div>
  </div>
</div>
`;

exports[`search Search with custom connector renders as expected 1`] = `
<div
  className="h36 relative"
>
  <div>
    <div>
      <button
        className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke "
        onClick={[Function]}
        style={Object {}}
      >
        <span
          className="mr6"
        >
          <svg
            className="icon w18 h18"
          >
            <use
              xlinkHref="#icon-search"
            />
          </svg>
        </span>
         
        Search
      </button>
    </div>
  </div>
</div>
`;

exports[`search Search with dark background, custom placeholder renders as expected 1`] = `
<div
  className="py24 px24 bg-gray-dark"
>
  <div
    className="w-full"
  >
    <div
      className="h36 relative"
    >
      <div>
        <div>
          <button
            className="flex-parent flex-parent--center-cross flex-parent--center-main btn btn--stroke btn--white"
            onClick={[Function]}
            style={Object {}}
          >
            <span
              className="mr6"
            >
              <svg
                className="icon w18 h18"
              >
                <use
                  xlinkHref="#icon-search"
                />
              </svg>
            </span>
             
            Search
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
